testing policies/mutate/patchStrategicMerge/2Rule_1Resource/resource.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
