testing policies/mutate/patchStrategicMerge/2Rule_1Resource/patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    foo: bar
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
